<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="9dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2F2F2F"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <ImageView
            android:id="@+id/icAvatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/avatar"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_avatar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:paddingVertical="10dp">


        </LinearLayout>

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/krub_regular"
                        android:text="@string/from"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvfrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/krub_regular"
                        android:text="@string/to"
                        android:textColor="@color/white" />


                </LinearLayout>


                <LinearLayout
                    android:layout_marginStart="15dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvFromReceived"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="none"
                        android:fontFamily="@font/krub_regular"
                        android:singleLine="false"
                        android:textColor="@color/white"
                        tools:text="Ул. Пушкина, д. 18" />

                    <TextView
                        android:id="@+id/tvToReceived"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/krub_regular"
                        android:textColor="@color/white"
                        tools:text="Ул. Пушкина, д. 19" />

                </LinearLayout>
            </LinearLayout>



            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/krub_regular"
                android:textColor="@color/white"
                tools:text="04.10.2025 в 17:39" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivInvalidType"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/avatar"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_invalid_rider" />

    </LinearLayout>


</androidx.cardview.widget.CardView>